<resources>
    <string name="app_name">CodelabLogin</string>
    <string name="facebook_app_id">220856442322296</string>
    <string name="fb_login_protocol_scheme">fb220856442322296</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_your_account">Create your account.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="or_login_with">Or Login with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="forget_password">Forget Password?</string>
</resources>
